@@ -1,7 +1,10 @@
 2006-06-16  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/27979
+	* g++.dg/expr/bitfield2.C: New test. 
+
 	PR c++/27884
-	* g++.dg/parse/linkage2.C: New test
+	* g++.dg/parse/linkage2.C: New test.
 
 2006-06-16  Richard Guenther  <rguenther@suse.de>
 
